# HistKit

./: .gitignore  LICENSE  README.md  great-docs.yml  pyproject.toml
examples/: README.md
src/histkit/: barycenter.py  distances.py  hist.py  matrix.py  plot.py
src/histkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
