[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "histkit"
version = "0.1.0"
description = "Library for histogram valued data analysis in Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/nathenbyford/HistKit"
Repository = "https://github.com/nathenbyford/HistKit"

[tool.setuptools.packages.find]
where = ["src"]